2004-05-19  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/xml/repr-get-children.h, src/xml/repr-get-children.cpp: New files.
	* src/xml/Makefile_insert (xml_libspxml_a_SOURCES): Add the new files.

	* src/xml/repr-private.h, src/xml/repr.cpp (sp_repr_nth_child):
	  Remove this unused function.

	* src/xml/repr.h, src/xml/repr.cpp (sp_repr_parent):
	  Mark pointer as not written through (const).

2004-05-18  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/xml/repr.cpp: Cleanup: greater conformance to CodingStyle.

	* src/Makefile_insert: Add missing dependencies on inkscape_version.h.
	* src/display/Makefile_insert: Adapt dependency object names for
	  `subdir-objects' automake option.
	* src/helper/Makefile_insert: Adapt dependency object names for
	  lack of libspchelp-specific CPPFLAGS.

2004-05-17  Carl Hetherington <inkscape@carlh.net>

	* src/libnrtype/nr-type-w32.cpp: Tentative fix for
	build problems on Win32.

	* src/extension/internal/svg.cpp: Coding style cleanups.

2004-05-17  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-item.h, src/sp-item.cpp: Remove unused
	  distance-conversion functions sp_item_distance_to_svg_bbox,
	  sp_item_distance_to_svg_viewport.

	* src/sp-item.cpp: Cleanup: greater conformance to CodingStyle.

	* acinclude.m4: Remove.

2004-05-16  Carl Hetherington  <inkscape@carlh.net>

	* src/extension/internal/svg.cpp:
	Throw an exception if sp_repr_save_file fails.  This should close
	bug 948921.

2004-05-16  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/check-header-compile.in: New script.
	* configure.in: Add it to list of files for substitution.

	* src/star-context.cpp: Minor cleanups, and use g_strdup_printf instead
	  of fixed-size buffer for translated string.

	* src/selection-chemistry.cpp: Use NR::Rect bounds() method instead of
	  old bounds(NRRect*).

	* src/document.cpp (sp_document_create): 
	* src/preferences-skeleton.h: